Fix computer overflow

--- a/static/src/styles/widgets.scss
+++ b/static/src/styles/widgets.scss
@@ -878,7 +878,9 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 50px;
+        gap: 25px;
+        overflow: scroll;
+
     }
 }
 
@@ -886,10 +888,11 @@
     user-select: none;
     padding: 15px; 
     border-radius: 10px; 
-    border: 1px solid $light-grey; 
+    border: 1px solid $light-grey;
     
     .grid-row-computer {
         display: flex;
+        justify-content: center;
         
         .step {
             height: 18px;
@@ -919,16 +922,15 @@
             font-size: 12px;
             margin-right: 10px;
             line-height: 25px;
-            width: 120px;
+            width: 80px;
             text-align: right;
-            position: absolute;
-            left: -135px;
+            position: relative;
+            //left: -135px;
         }
     
         
     }
 }
-
 
 .spectrum-graph {
     width: 778px;
@@ -936,9 +938,7 @@
     border: 1px solid $grey;
     border-radius: 10px;
     padding: 0;
-    overflow: hidden;
 }
-
 
 .tonality-selector {
     position: absolute;
